--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -40,3 +41,6 @@ yarn-error.log*
 
 # testing
 playwright/test-results
+
+# IDE
+.idea
