--- a/package.json
+++ b/package.json
@@ -32,21 +32,32 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@sparticuz/chromium": "123.0.1",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "npm:@trpc/client@next",
     "@trpc/next": "npm:@trpc/next@next",
     "@trpc/react-query": "npm:@trpc/react-query@next",
     "@trpc/server": "npm:@trpc/server@next",
-    "clsx": "^2.0.0",
-    "next": "^14.1.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-kit": "^0.21.4",
+    "drizzle-orm": "^0.30.10",
+    "lucide-react": "^0.379.0",
+    "next": "15.0.0-rc.0",
+    "nodemailer": "6.9.13",
+    "postgres": "^3.4.4",
+    "puppeteer-core": "22.8.1",
+    "react": "19.0.0-beta-04b058868c-20240508",
+    "react-dom": "19.0.0-beta-04b058868c-20240508",
     "superjson": "^1.12.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.26.1",
     "@types/node": "^20.10.0",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
