--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "next build",
     "start": "next start",
     "db:pull": "drizzle-kit introspect",
+    "db:push": "drizzle-kit push",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
-    "lint-fix": "pnpm lint --fix",
+    "lint-fix": "bun lint --fix",
     "test-unit": "vitest",
     "test-e2e": "playwright test",
     "test-start": "run-s test-unit test-e2e"
@@ -21,7 +22,10 @@
     "@auth/drizzle-adapter": "^1.1.0",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@sparticuz/chromium": "123.0.1",
     "@tanstack/react-query": "^5.25.0",
