add commands db

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "db:pull": "drizzle-kit introspect",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
+    "with-env": "dotenv -e .env.local --",
+    "db:pull": "bun with-env drizzle-kit introspect",
+    "db:push": "bun with-env drizzle-kit push",
+    "db:generate": "bun with-env drizzle-kit generate",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
     "lint-fix": "bun lint --fix",
     "test-unit": "vitest",
@@ -38,6 +39,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.21.4",
     "drizzle-orm": "^0.30.10",
     "formik": "^2.4.6",
