--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env 
+.env
 .env.local
 .env.local
 .env.development.local
